Time: 2 ms (95.57%), Space: 42.4 MB (90.42%) - LeetHub